--- a/style.css
+++ b/style.css
@@ -1,7 +1,18 @@
+@media screen and (min-width: 640px){
+    .flex-container {
+        display: flex;
+    }
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+.wrapper {
+    margin: auto;
+    max-width: 75rem;
 }
 
 h1 {
